# text-editing

./: .gitignore  LICENSE  README.md  combine_files.py  extract_subedits.py  gec.py  measure_models.py  pyproject.toml  requirements.txt  setup.py  subedit_class_label.tsv  subedits_only.txt
data/: create_edits.py  create_edits.sh  create_edits_pnx_sep.py  create_edits_pnx_sep.sh  edit.py  edits_ensemble.py  match_edit_dist.ipynb  oov_rate.ipynb  readme.txt  resize_tokenizer.ipynb  run_ensemble.sh  sep_pnx.ipynb  tokenizer.py  train_tokenizer.ipynb  utils.py
data/alignment/: aligner.py  ced_alignment.py
data/tokenizer-3/: tokenizer.json  vocab.txt
data/tokenizer-4/: tokenizer.json  vocab.txt
data/tokenizer-5/: tokenizer.json  vocab.txt
edits/: README.md  create_edits.py  create_edits_pnx_sep.py  edit.py  edits_coverage.ipynb  edits_ensemble.py  run_ensemble.sh  tokenizer.py  utils.py
edits/alignment/: ced_alignment.py
gec/: README.md  ensemble.py  model.py  run_tagger_custom.sh  tag.py
ged/: create_ged_subword_annotation.py  run_tagger_13.sh  run_tagger_43.sh  tag_areta_13.py  test_tagger_13.sh  test_tagger_43.sh
gedc/: model.py  tag_multi_label_areta.py
mle/: data_utils.py  dev.mle.txt  dev.mle.txt.m2  dev.mle.txt.nopnx  dev.mle.txt.nopnx.m2  dev.mle.txt.nopnx.pp  dev.mle.txt.pp  run_m2scorer.sh  tagger_word.py  zaebuc_dev.mle.txt  zaebuc_dev.mle.txt.m2  zaebuc_dev.mle.txt.nopnx  zaebuc_dev.mle.txt.nopnx.m2  zaebuc_dev.mle.txt.tok
mlm/: job.9667392.err  job.9667392.out  job.9691306.err  job.9691306.out  run_mlm.sh
tagger/: avg_checkpoints.py  evaluate.py  ged.py  get_results.ipynb  job.9850059.9850059.err  job.9850059.9850059.out  job.9850060.9850059.err  job.9850060.9850059.out  job.9850061.9850059.err  job.9850061.9850059.out  job.9850062.9850059.err  job.9850062.9850059.out  job.9850063.9850059.err  job.9850063.9850059.out  job.9850064.9850059.err  job.9850064.9850059.out  job.9850065.9850059.err  job.9850065.9850059.out  job.9850066.9850059.err  job.9850066.9850059.out  job.9850068.9850059.err  job.9850068.9850059.out  job.9850069.9850059.err  job.9850069.9850059.out  job.9850070.9850059.err  job.9850070.9850059.out  job.9850071.9850059.err  job.9850071.9850059.out  job.9850072.9850059.err  job.9850072.9850059.out  run_ged.sh  run_m2scorer.py  run_m2scorer.sh  run_tagger.sh  run_tagger_test.sh  run_tagger_test_checkpoint_arr_iter.sh  run_tagger_test_checkpoint_arr_pnx_sep.sh  run_tagger_test_checkpoint_arr_search.sh  run_tagger_test_checkpoint_iterative_decoding.sh  run_tagger_test_checkpoint_iterative_decoding_pnx_sep.sh  (+3 more)
tagger-muti-task/: get_binary_labels.py  get_binary_labels.sh  job.9743609.out  model.py  run_m2scorer.sh  run_tagger.sh  run_tagger_test.sh  run_tagger_test_checkpoint.sh  run_tagger_test_checkpoint_arr_iter.sh  run_tagger_test_checkpoint_iterative_decoding_pnx_sep.sh  tag.py  tag_new.py  utils.py
tagger-word-level/: get_best_checkpoint.py  model.py  run_ged_test_checkpoint_arr.sh  run_m2scorer.sh  run_tagger.sh  run_tagger_test.sh  run_tagger_test_checkpoint.sh  run_tagger_test_checkpoint_arr.sh  run_tagger_test_checkpoint_arr_iter.sh  run_tagger_test_checkpoint_iterative_decoding_pnx_sep.sh  run_tagger_test_debug.sh  tag.py  utils.py
util/: get_best_checkpoint.py  postprocess.py
(+922 files in other folders)
