[tool.poetry]
name = "text_editing"
version = "0.1"
description = "Text editing package for grammatical error correction and text processing"
authors = ["Bashar Alhafni <alhafni@nyu.edu>"]
maintainers = ["Bashar Alhafni <alhafni@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "edits"},
    {include = "gec"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
absl-py = "2.1.0"
accelerate = "0.26.1"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
blessed = "1.20.0"
blis = "0.7.6"
CacheMan = "2.2.0"
cachetools = "5.3.2"
camel-tools = "1.5.2"
catalogue = "2.0.6"
certifi = "2023.11.17"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
cycler = "0.12.1"
cymem = "2.0.6"
Cython = "3.0.11"
datasets = "3.2.0"
dill = "0.3.7"
docker-pycreds = "0.4.0"
docopt = "0.6.2"
editdistance = "0.6.2"
emoji = "2.10.0"
evaluate = "0.4.0"
filelock = "3.12.4"
fonttools = "4.49.0"
frozenlist = "1.4.0"
fsspec = "2023.6.0"
gitdb = "4.0.11"
GitPython = "3.1.42"
gluonnlp = "0.10.0"
gpustat = "1.1.1"
graphviz = "0.8.4"
huggingface-hub = "0.23.4"
idna = "3.6"
jiwer = "3.0.4"
joblib = "1.3.2"
jsonlines = "4.0.0"
kiwisolver = "1.4.5"
langcodes = "3.3.0"
Levenshtein = "0.25.0"
lxml = "5.1.0"
matplotlib = "3.8.3"
more-itertools = "10.6.0"
mosestokenizer = "1.2.1"
muddler = "0.1.3"
multidict = "6.0.4"
multiprocess = "0.70.15"
murmurhash = "1.0.6"
nltk = "3.8.1"
numexpr = "2.10.2"
openfile = "0.0.7"
pathvalidate = "3.2.3"
pathy = "0.6.1"
pillow = "10.2.0"
plotly = "5.19.0"
portalocker = "2.8.2"
preshed = "3.0.6"
protobuf = "3.20.0"
pyarrow = "19.0.0"
pybind11 = "2.13.6"
pydantic = ">=1.7.4,<1.9"
pyparsing = "3.1.1"
pyrsistent = "0.20.0"
python-Levenshtein = "0.25.0"
pytz = "2023.3.post1"
PyYAML = "6.0.1"
rapidfuzz = "3.6.1"
regex = "2023.12.25"
requests = "2.32.3"
responses = "0.18.0"
sacrebleu = "2.0.0"
sacremoses = "0.1.1"
safetensors = "0.4.1"
scikit-learn = "1.4.0"
scipy = "1.12.0"
seaborn = "0.13.2"
sentencepiece = "0.2.0"
sentry-sdk = "2.19.2"
setproctitle = "1.3.4"
simalign = "0.4"
smart-open = "5.2.1"
smmap = "5.0.1"
spacy = "3.2.3"
spacy-legacy = "3.0.9"
spacy-loggers = "1.0.1"
sqlitedict = "2.1.0"
srsly = "2.4.7"
stanfordnlp = "0.2.0"
sympy = "1.13.1"
tabulate = "0.9.0"
tcolorpy = "0.1.7"
tenacity = "8.2.3"
thinc = "8.0.13"
threadpoolctl = "3.2.0"
tokenizers = "0.12.1"
toolwrapper = "2.1.0"
torch = "1.12.1"
tqdm = "4.67.1"
tqdm-multiprocess = "0.0.11"
transformers = "4.30.0"
typer = "0.4.0"
typing_extensions = "4.12.2"
tzdata = "2023.3"
uctools = "1.3.0"
urllib3 = "2.1.0"
wandb = "0.18.7"
wasabi = "0.9.0"
word2number = "1.1"
xxhash = "3.3.0"
yarl = "1.9.2"
yattag = "1.15.2"
zstandard = "0.23.0"
numpy = "1.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
